2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1270 - Update to mingw-cross-compile.sh

	* build/mingw/mingw-cross-compile.sh: Update to download latest
	binaries. Patch thanks to David Kedves.

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1271 - mingw compiling failed: undefined reference to
	`_glDrawRangeElements@24'

	Resolve glDrawRangeElements with cogl_get_proc_address instead of
	calling it directly because functions defined in GL > 1.1 are not
	directly exported under Windows.

	* clutter/cogl/common/cogl-mesh.c: Use the function pointer from
	the context

	* clutter/cogl/gl/cogl-context.c (cogl_create_context): Initialise
	function pointer.

	* clutter/cogl/gl/cogl-context.h (CoglContext): Add a function
	pointer

	* clutter/cogl/gl/cogl-defines.h.in: Add a typedef for the
	function pointer.

	* clutter/cogl/gl/cogl.c (_cogl_features_init): Resolve
	glDrawRangeElements

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	* tests/interactive/Makefile.am:
	* tests/conform/Makefile.am: Use $(EXEEXT) when specifying a
	dependency on an executable otherwise there won't be a rule to
	build it on Windows.

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1269 - mingw32 building failed at clutter-media.c

	* clutter/clutter-media.c: Rename the 'ERROR' signal enum to
	'ERROR_SIGNAL' otherwise it clashes with windgi.h. Thanks to David
	Kedves

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	* clutter/pango/cogl-pango.h: Include pango/pango.h to get
	pango-renderer.h. In versions prior to 1.18.4 pangocairo.h does
	not include pango-renderer.h

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1280 - clutter_score_append_at_marker lead to segmentation
	fault in trunk and incorrect appearance in clutter-0.8

	* clutter/clutter-score.c (start_children_entries): Check whether
	the child timeline is actually attached at a marker before
	comparing whether the marker's name matches the marker